src/objects/FMP_Follow_up__c.object
<CustomObject>
    
    <fields>
        <fullName>CofeePackaging__c</fullName>
        <label>CofeePackaging</label>
        <picklist>
            <picklistValues>
                <fullName>Están limpios y aptos para la cosecha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Están sucios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sirven para manipular agroquímicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sirven para manipular abonos orgánicos</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FMP_Follow_up_location__c</fullName>
        <label>FMP Follow up location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FMP_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FMP Target</label>
        <referenceTo>FMP_Target__c</referenceTo>
        <relationshipLabel>FMP_Followup_Target</relationshipLabel>
        <relationshipName>FMP_Followup_Target</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FaunaFloraRecoveryPlan__c</fullName>
        <label>FaunaFloraRecoveryPlan</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FriendlyMethodsReducingHerbicide__c</fullName>
        <label>FriendlyMethodsReducingHerbicide</label>
        <picklist>
            <picklistValues>
                <fullName>Control físico/mecánico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivos de cobertura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulch (colchón material orgánico)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distancias de siembra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manejo de sombra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control químico/herbicidas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno de los anteriores</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RecordsAgrochemicalsApplications__c</fullName>
        <label>RecordsAgrochemicalsApplications</label>
        <picklist>
            <picklistValues>
                <fullName>Fecha de aplicación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No registra ningún dato</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RecoveryErodedAreas__c</fullName>
        <label>RecoveryErodedAreas</label>
        <picklist>
            <picklistValues>
                <fullName>Curvas de nivel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terrazas individuales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terrazas de banco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barreras vivas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barreras físicas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acequias</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivos de cobertura de suelo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulch (colchón de materia orgánica)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No realiza ninguna de esas prácticas</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RegulationOfShadow__c</fullName>
        <label>RegulationOfShadow</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>FMP_Followups_Submission</relationshipLabel>
        <relationshipName>FMP_Followups_Submission</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransformationPulpsForUse__c</fullName>
        <label>TransformationPulpsForUse</label>
        <picklist>
            <picklistValues>
                <fullName>La escurre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La protege de la lluvia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procesa en compost en cuanto es posible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lo vende sin procesar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La amontona sin protección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lo vierte al río</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La bota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>UsingNativeSpeciesAsShading__c</fullName>
        <label>UsingNativeSpeciesAsShading</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WastewaterManagement__c</fullName>
        <label>WastewaterManagement</label>
        <picklist>
            <picklistValues>
                <fullName>Las vierte en fuente de agua sin tratar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las vierte en pozos de infiltración</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escurrimiento superficial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planta de tratamiento de aguas mieles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La utiliza como modo de fertilización</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>WetmillSafety__c</fullName>
        <label>WetmillSafety</label>
        <picklist>
            <picklistValues>
                <fullName>Contaminación de fuentes de agua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Riesgo de contaminación del café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Riesgo de mezcla de café cert y no cert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Riesgo de mezcla de diferentes calidades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ningún riesgo</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>WetmillWaterManagement__c</fullName>
        <label>WetmillWaterManagement</label>
        <picklist>
            <picklistValues>
                <fullName>Las vierte en fuente de agua sin tratar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las vierte en pozos de infiltración</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escurrimiento superficial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planta de tratamiento de aguas mieles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La utiliza como modo de fertilización</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>adequateTransportation__c</fullName>
        <label>adequateTransportation</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>channelsScamperOk__c</fullName>
        <label>channelsScamperOk</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>checklist__c</fullName>
        <label>checklist</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>coffeeDryingSystemOk__c</fullName>
        <label>coffeeDryingSystemOk</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>controlAccordingMonitoring__c</fullName>
        <label>controlAccordingMonitoring</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>evaluationPulping__c</fullName>
        <label>evaluationPulping</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>farmMap__c</fullName>
        <label>farmMap</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fermentationTanksOk__c</fullName>
        <label>fermentationTanksOk</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>followUpFaunaFloraRecoveryPlan__c</fullName>
        <formula>IF(TEXT( FaunaFloraRecoveryPlan__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpFaunaFloraRecoveryPlan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUp_Total_Score__c</fullName>
        <label>followUp_Total_Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpadequateTransportation__c</fullName>
        <formula>IF(TEXT(adequateTransportation__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpadequateTransportation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpchannelsScamperOk__c</fullName>
        <formula>IF(TEXT(channelsScamperOk__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpchannelsScamperOk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpchecklist__c</fullName>
        <formula>IF(TEXT(checklist__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpchecklist</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpcoffeeDryingSystemOk__c</fullName>
        <formula>IF(TEXT(coffeeDryingSystemOk__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpcoffeeDryingSystemOk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpcoffeePackaging__c</fullName>
        <formula>IF( INCLUDES( CofeePackaging__c, &quot;Están limpios y aptos para la cosecha&quot;)=TRUE, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpcoffeePackaging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpcontrolAccordingMonitoring__c</fullName>
        <formula>IF(TEXT(controlAccordingMonitoring__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpcontrolAccordingMonitoring</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpevaluationPulping__c</fullName>
        <formula>IF(TEXT( evaluationPulping__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpevaluationPulping</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpfarmMap__c</fullName>
        <formula>IF(TEXT( farmMap__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpfarmMap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpfermentationTanksOk__c</fullName>
        <formula>IF(TEXT(fermentationTanksOk__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpfermentationTanksOk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpfmp_Agrochemicals_Score__c</fullName>
        <formula>followUphasProtectionEquipment__c + followUpuseProtectionEquipment__c + followUprecordsAgrochemicalsApplications__c + followUptrainsStaffAgrochemicalsHandling__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpfmp_Agrochemicals_Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpfmp_Environment_Score__c</fullName>
        <formula>followUpwastewaterManagement__c + followUpwetmillWaterManagement__c + followUptransformationPulpsForUse__c + followUpFaunaFloraRecoveryPlan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpfmp_Environment_Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpfmp_Harvest_Score__c</fullName>
        <formula>followUpharvestRecord__c + followUpharvestEvaluation__c + followUpwetmillSafety__c + followUpwarehouseSafety__c + followUpevaluationPulping__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpfmp_Harvest_Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpfmp_Lot_Score__c</fullName>
        <formula>followUpfarmMap__c + followUpknowledgeAreasLots__c + followUprecordVarietiesTreesPerLot__c + followUpregistrationWorkPerLot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpfmp_Lot_Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpfmp_MIPE_Score__c</fullName>
        <formula>followUpmonitoringRecordPestDisease__c + followUpmakingMonitoringPestsDiseases__c + followUpcontrolAccordingMonitoring__c + followUppostControlEvaluation__c + followUpusingControlMethodsForPYE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpfmp_MIPE_Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpfmp_Record_score__c</fullName>
        <formula>followUprecordOfLabor__c + followUprecordPesticideApplications__c + followUprecordPurchasingInputs__c + followUprecordSalesCPS__c + followUprecordHarvesting__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpfmp_Record_score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpfmp_Seedbed_Score__c</fullName>
        <formula>followUpimplemetationSeedbedPlan__c + followUpproperSubstratesPreparation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpfmp_Seedbed_Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpfmp_Shadow_Score__c</fullName>
        <formula>followUpusingNativeSpeciesAsShading__c + followUpregulationOfShadow__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpfmp_Shadow_Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpfmp_Soil_Score__c</fullName>
        <formula>followUpidentifyingErodedAreas__c + followUprecoveryErodedAreas__c + followUpreforestationNativeSpecies__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpfmp_Soil_Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpfmp_Wedmill_Score__c</fullName>
        <formula>followUpchecklist__c + followUpseparationCoffeePerLot__c + followUpseparationCoffeeQuality__c + followUppulpingMachineOk__c + followUpzarandaGoodCondition__c + followUpfermentationTanksOk__c + followUptanksMucilageRemoverOk__c + followUpchannelsScamperOk__c + followUppulpCompostingPit__c + followUphoneyWaterTreatmentTank__c + followUpcoffeeDryingSystemOk__c + followUpcoffeePackaging__c + followUpproperCoffeeStorage__c + followUpadequateTransportation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpfmp_Wedmill_Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpfmp_Weeds_Score__c</fullName>
        <formula>followUpfriendlyMethodsReducingHerbicide__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpfmp_Weeds_Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpfriendlyMethodsReducingHerbicide__c</fullName>
        <formula>IF( INCLUDES( FriendlyMethodsReducingHerbicide__c, &quot;Control físico/mecánico&quot;) = TRUE || INCLUDES( FriendlyMethodsReducingHerbicide__c, &quot;Cultivos de cobertura&quot;) = TRUE || INCLUDES( FriendlyMethodsReducingHerbicide__c, &quot;Mulch (colchón material orgánico)&quot;) = TRUE || INCLUDES( FriendlyMethodsReducingHerbicide__c, &quot;Distancias de siembra&quot;) = TRUE || INCLUDES( FriendlyMethodsReducingHerbicide__c, &quot;Manejo de Sombra&quot;) = TRUE, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpfriendlyMethodsReducingHerbicide</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpharvestEvaluation__c</fullName>
        <formula>IF(TEXT( harvestEvaluation__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpharvestEvaluation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpharvestRecord__c</fullName>
        <formula>IF( INCLUDES( harvestRecord__c, &quot;Con documentación/registros de soporte&quot;) = TRUE, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpharvestRecord</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUphasProtectionEquipment__c</fullName>
        <formula>IF(TEXT( hasProtectionEquipment__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUphasProtectionEquipment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUphoneyWaterTreatmentTank__c</fullName>
        <formula>IF( INCLUDES( honeyWaterTreatmentTank__c, &quot;Las vierte en pozos de infiltración&quot;) = TRUE || INCLUDES( honeyWaterTreatmentTank__c, &quot;Planta de tratamiento de aguas mieles&quot;) = TRUE, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUphoneyWaterTreatmentTank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpidentifyingErodedAreas__c</fullName>
        <formula>IF(TEXT(identifyingErodedAreas__c ) = &quot;Cumple&quot;, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpidentifyingErodedAreas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpimplemetationSeedbedPlan__c</fullName>
        <formula>IF(TEXT(implemetationSeedbedPlan__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpimplemetationSeedbedPlan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpknowledgeAreasLots__c</fullName>
        <formula>IF(TEXT( knowledgeAreasLots__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpknowledgeAreasLots</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpmakingMonitoringPestsDiseases__c</fullName>
        <formula>IF(TEXT( makingMonitoringPestsDiseases__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpmakingMonitoringPestsDiseases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpmonitoringRecordPestDisease__c</fullName>
        <formula>IF(TEXT( monitoringRecordPestDisease__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpmonitoringRecordPestDisease</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUppostControlEvaluation__c</fullName>
        <formula>IF(TEXT(postControlEvaluation__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUppostControlEvaluation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpproperCoffeeStorage__c</fullName>
        <formula>IF(TEXT(properCoffeeStorage__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpproperCoffeeStorage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpproperSubstratesPreparation__c</fullName>
        <formula>IF(TEXT(properSubstratesPreparation__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpproperSubstratesPreparation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUppulpCompostingPit__c</fullName>
        <formula>IF( INCLUDES( pulpCompostingPit__c, &quot;Procesa en compost en cuanto es posible&quot;)= TRUE, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUppulpCompostingPit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUppulpingMachineOk__c</fullName>
        <formula>IF( INCLUDES( pulpingMachineOk__c, &quot;Granos enteros y limpios&quot;)=TRUE, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUppulpingMachineOk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUprecordHarvesting__c</fullName>
        <formula>IF(TEXT(recordHarvesting__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUprecordHarvesting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUprecordOfLabor__c</fullName>
        <formula>IF(TEXT(recordOfLabor__c) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUprecordOfLabor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUprecordPesticideApplications__c</fullName>
        <formula>IF( INCLUDES( recordPesticideApplications__c, &quot;Fecha de aplicación,Dosis,Lote&quot;)=TRUE, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUprecordPesticideApplications</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUprecordPurchasingInputs__c</fullName>
        <formula>IF(TEXT(recordPurchasingInputs__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUprecordPurchasingInputs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUprecordSalesCPS__c</fullName>
        <formula>IF(TEXT(recordSalesCPS__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUprecordSalesCPS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUprecordVarietiesTreesPerLot__c</fullName>
        <formula>IF(TEXT( recordVarietiesTreesPerLot__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUprecordVarietiesTreesPerLot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUprecordsAgrochemicalsApplications__c</fullName>
        <formula>IF( INCLUDES( RecordsAgrochemicalsApplications__c, &quot;Fecha de aplicación&quot;) = TRUE &amp;&amp; INCLUDES( RecordsAgrochemicalsApplications__c, &quot;Dosis&quot;) = TRUE &amp;&amp; INCLUDES( RecordsAgrochemicalsApplications__c, &quot;Lote&quot;) = TRUE , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUprecordsAgrochemicalsApplications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUprecoveryErodedAreas__c</fullName>
        <formula>IF(INCLUDES(RecoveryErodedAreas__c, &quot;Curvas a nivel&quot;) = TRUE || INCLUDES(RecoveryErodedAreas__c, &quot;Terrazas individuales&quot;) = TRUE || INCLUDES(RecoveryErodedAreas__c, &quot;Terrazas de banco&quot;) = TRUE || INCLUDES( RecoveryErodedAreas__c, &quot;Barreras vivas&quot;) = TRUE || INCLUDES( RecoveryErodedAreas__c, &quot;Barreras físicas&quot;) = TRUE || INCLUDES( RecoveryErodedAreas__c, &quot;Acequias&quot;) = TRUE || INCLUDES( RecoveryErodedAreas__c, &quot;Cultivos de cobertura de suelo&quot;) = TRUE || INCLUDES( RecoveryErodedAreas__c, &quot;Mulch (colchon de materia orgánica)&quot;) = TRUE, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUprecoveryErodedAreas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpreforestationNativeSpecies__c</fullName>
        <formula>IF(TEXT(reforestationNativeSpecies__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpreforestationNativeSpecies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpregistrationWorkPerLot__c</fullName>
        <formula>IF(TEXT( registrationWorkPerLot__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpregistrationWorkPerLot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpregulationOfShadow__c</fullName>
        <formula>IF( RegulationOfShadow__c &gt; 20, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpregulationOfShadow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpseparationCoffeePerLot__c</fullName>
        <formula>IF(TEXT(separationCoffeePerLot__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpseparationCoffeePerLot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpseparationCoffeeQuality__c</fullName>
        <formula>IF(TEXT(separationCoffeeQuality__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpseparationCoffeeQuality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUptanksMucilageRemoverOk__c</fullName>
        <formula>IF(TEXT(tanksMucilageRemoverOk__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUptanksMucilageRemoverOk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUptrainsStaffAgrochemicalsHandling__c</fullName>
        <formula>IF(TEXT( trainsStaffAgrochemicalsHandling__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUptrainsStaffAgrochemicalsHandling</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUptransformationPulpsForUse__c</fullName>
        <formula>IF( INCLUDES( TransformationPulpsForUse__c, &quot;Procesa en compost en cuanto es posible&quot;) = TRUE, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUptransformationPulpsForUse</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpuseProtectionEquipment__c</fullName>
        <formula>IF(TEXT( useProtectionEquipment__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpuseProtectionEquipment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>